--- a/style.css
+++ b/style.css
@@ -1,17 +1,119 @@
 *{
     margin: 0;
     padding: 0;
+    font-family: Arial, Helvetica, sans-serif;
+    border: border-box;
 }
 
-#nav{
-    height: 100px;
+.nav-bar{
+    height: 60px;
     background-color: black;
     color: white;
     display: flex;
-    justify-content:space-between;
+    justify-content: space-evenly;
     align-items: center;
 }
-img{
- height: 50px;
- width: 113px;
+.nav-logo{
+    
+    height: 50px;
+    width: 100px;
+    
+}
+.border{
+    border: 1.5px solid transparent;
+}
+.border:hover{
+    border: 1.5px solid white;
+}
+.logo{
+    background-image: url("Amazon-Logo-Black.jpg");
+    background-size:cover;
+    height: 50px;
+    width: 100%;
+}
+
+.add-icon{
+    display: flex;
+}
+.nav-address{
+    padding: 9px;
+    width: 100px;
+}
+.nav-address p{
+    font-size: 13px;
+    color: #CCCCCC;
+    padding-left: 15px;
+
+}
+.nav-address h5{
+    padding-left: 3px;
+    font-size: 16px;
+    color: white;
+}
+
+.search-Bar{
+    display: flex;
+   justify-content: space-evenly;
+    height: 40px;
+    width: 900px;
+    border: 2px solid transparent;
+   
+}
+.search-Bar:hover{
+    border: 2px solid orange;
+}
+.selection{
+    width: 50px;
+    background-color: #E6E6E6;
+    font-size: 14px;
+    border: 2px solid #E6E6E6;
+    border-top-left-radius: 5px;
+    border-bottom-left-radius: 5px;
+    border: none;
+    
+}
+.searchInput{
+    width: 100%;
+    font-size: 1rem;
+    border: none;
+    
+}
+.search-Icon{
+    background-color: rgb(218, 155, 37);
+    width: 45px;
+    border-top-right-radius: 5px;
+    border-bottom-right-radius: 5px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.nav-signIn{
+    padding: 9px;
+}
+span{
+    font-size: 12px;
+}
+
+.sec-line{
+    font-size: 14px;
+    font-weight: 700;
+}
+
+.cart-logo{
+    width: 80px;
+    font-size: 15px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding: 9px;
+    
+}
+
+.cart-logo i{
+    font-size: 25px;
+}
+
+.cart-logo .cart{
+    padding-top: 14px;
 }
